# e2e

./: .gitignore  pyproject.toml
configs/deploy/: interactive.yaml  submitit.yaml
configs/experiment/20m/extension/: ext-125m-e2e-32K.yaml  ext-125m-fa-32K.yaml
configs/experiment/20m/pretrain/: pretrain-20m-e2e.yaml
configs/model/: 20m.yaml
configs/training/20m/: ext.yaml  pretrain-8K.yaml
ttt/: train.py
ttt/infra/: wandb_utils.py
ttt/model/: attention.py  loop.py  sharding.py
ttt/utils/: jax_utils.py
